...
                fontWeight = FontWeight.Bold,
                fontSize = 24.sp,
                modifier = Modifier.padding(vertical = 15.dp).testTag("courseNameTitle"))
            OutlinedTextField(
                value = name,
                modifier =
                    Modifier.fillMaxWidth().padding(vertical = 10.dp).testTag("courseNameField"),
                onValueChange = { name = it },
                placeholder = { Text("Name of the course") })

            // Add file to the course
            Text(
                "Files",
...
                    onClick = {
                      it.lastAccess = Calendar.getInstance()
                      it.numberAccess += 1
                      folderViewModel.updateFolder(folder)
                      fileViewModel.openFile(it.fileId, context)
                    },
                    modifier = Modifier.fillMaxWidth().padding(vertical = 3.dp).testTag("file"),
                    colors =
                        ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primary,
                            contentColor = MaterialTheme.colorScheme.onPrimary)) {
                      Box(
                          modifier = Modifier.fillMaxWidth(),
...
                onClick = {
                  folderViewModel.addFolder(folder)
                  files = emptyList()
                  name = ""
                  navigationActions.goBack()
                },
                modifier = Modifier.fillMaxWidth().padding(vertical = 2.dp).testTag("folderSave"),
                colors =
                    ButtonDefaults.buttonColors(
                        containerColor = MaterialTheme.colorScheme.primary,
                        contentColor = MaterialTheme.colorScheme.onPrimary)) {
                  Text("Save")
                }
...
