...
  Dialog(onDismissRequest = onDismiss) {
    Column(
        modifier =
            Modifier.clip(RoundedCornerShape(8.dp))
                .background(androidx.compose.material3.MaterialTheme.colorScheme.background)
                .padding(16.dp)
                .testTag("confirm")) {
          Text("Are you sure you want to delete $number folder(s) ?")
          Row(
              horizontalArrangement = Arrangement.SpaceBetween,
              modifier = Modifier.fillMaxWidth()) {
                Button(
                    onClick = onConfirm,
...
    onDownload: () -> Unit,
    onDelete: () -> Unit
) {
  var expanded by remember { mutableStateOf(false) }

  Box(modifier) {
    IconButton(onClick = { expanded = true }, modifier = Modifier.testTag("editButton")) {
      Icon(Icons.Default.Edit, contentDescription = "Edit File")
    }

    DropdownMenu(
        expanded = expanded,
        modifier = Modifier.width(IntrinsicSize.Min),
...
              onClick = {
                onDownload()
                expanded = false
              })
          DropdownMenuItem(
              text = { Text("Delete", modifier = Modifier.fillMaxWidth()) },
              modifier = Modifier.fillMaxWidth().testTag("delete"),
              onClick = {
                onDelete()
                expanded = false
              })
        }
  }
...
