...
              if (context.isNetworkAvailable()) {
                navigationActions.navigateTo(Screen.CREATE_FILE)
              } else {
                folderViewModel.showOfflineMessage(context)
              }
            },
            modifier = Modifier.testTag("createFile"),
            backgroundColor = MaterialTheme.colorScheme.primary,
            elevation = FloatingActionButtonDefaults.elevation(0.dp, 0.dp, 0.dp, 0.dp)) {
              Icon(Icons.Default.Add, contentDescription = "Create File")
            }
      }) { padding ->
        if (deleteDialogOpen) {
...
                      fontWeight = FontWeight.Bold,
                      fontSize = 24.sp,
                      modifier = Modifier.testTag("textFiles"))
                  Box {
                    Button(
                        onClick = { sorting = true },
                        modifier = Modifier.testTag("sortingButton"),
                        colors = transparentButtonColor(MaterialTheme.colorScheme.onBackground),
                        border = BorderStroke(1.dp, MaterialTheme.colorScheme.onBackground)) {
                          Icon(Icons.AutoMirrored.Filled.List, "Sort files")
                        }
                    DropdownMenu(
                        expanded = sorting,
                        modifier = Modifier.width(IntrinsicSize.Min),
                        onDismissRequest = { sorting = false },
                        properties = PopupProperties(focusable = false)) {
                          DropdownMenuItem(
                              text = { Text("Alphabetic", modifier = Modifier.fillMaxWidth()) },
                              modifier = Modifier.fillMaxWidth().testTag("sortMode1"),
                              onClick = {
                                folderViewModel.sortBy(FilterTypes.NAME)
                                sorting = false
                              })
                          DropdownMenuItem(
...
