...
              "File Name",
              fontWeight = FontWeight.Bold,
              fontSize = 24.sp,
              modifier = Modifier.padding(vertical = 15.dp).testTag("fileNameTitle"))
          OutlinedTextField(
              value = name,
              modifier = Modifier.fillMaxWidth().padding(vertical = 10.dp).testTag("fileNameField"),
              onValueChange = { name = it },
              placeholder = { Text("Name of the file") })

          Row(
              modifier = Modifier.padding(vertical = 15.dp).fillMaxWidth(),
              horizontalArrangement = Arrangement.SpaceBetween,
...
              },
              enabled = validNewFile,
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(vertical = 2.dp)
                      .align(Alignment.End)
                      .testTag("fileSave"),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.primary,
                      contentColor = MaterialTheme.colorScheme.onPrimary)) {
                Text("Save")
              }
...
